--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<h1>Marco Collepiccolo</h1>
-<p> Student of computer engineering at the university of Rome </p>
-<a href="">CV</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Marco's page</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css" />
+        <script src="index.js"></script>
+    </head>
+    <body>
+        <h1>Marco Collepiccolo</h1>
+        <p> Student of computer engineering at the university of Rome </p>
+        <a href="">CV</a>
+    </body>
+</html>
