--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
         <h1>Marco Collepiccolo</h1>
         <p> Student of computer engineering at the university of Rome </p>
-        <a href="">CV</a>
+        <a href="cv.html">CV</a>
     </body>
 </html>
