--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>Marco Collepiccolo</h1>
         <p> Student of computer engineering at the university of Rome </p>
-        <a href="cv.html">CV</a>
+        <a id="viewcv" href="cv.html">View CV</a>
+        <a id="downloadcv" href="cv.html">Download CV</a>
     </body>
 </html>
