--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@
         <a id="downloadcv">Download CV</a>
     </body>
 </html>
+
+[cv.pdf](https://github.com/marvmarco/marvmarco.github.io/blob/master/cv.pdf)
