--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <p> Student of computer engineering at the university of Rome </p>
         <a id="viewcv">View CV</a>
         <a id="downloadcv">Download CV</a>
+        <div markdown="1">
+            [cv.pdf](https://github.com/marvmarco/marvmarco.github.io/blob/master/cv.pdf)
+        </div>
     </body>
 </html>
 
-[cv.pdf](https://github.com/marvmarco/marvmarco.github.io/blob/master/cv.pdf)
